--- a/Spring Boot/20-08-2024/spring_boot_project-JDBC/src/main/resources/application.properties
+++ b/Spring Boot/20-08-2024/spring_boot_project-JDBC/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=spring_boot_project-1
 spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
 spring.datasource.username=root
 spring.datasource.password=#Shreyash444
+spring.jpa.hibernate.ddl-auto=update
